# vectordb

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: client.rs  datastructures.rs  lib.rs  protocol.rs  server.rs
tests/: bin_tests.rs
