[package]
name = "vectordb"
version = "2024.9.1"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
rmpv = { version = "1.3.0", features = ["serde", "serde_bytes", "with-serde"] }
serde_json = "1.0.128"
atty = "0.2.14"
